--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ html {
   background-color: #fff;
 }
   
-/* Variáveis corrigidas */
 :root {
   --background-color-principal: #F2F2F4;
   --background-color-secundario: #FF4800;
@@ -23,8 +22,13 @@ html {
 span {
   color: var(--background-color-secundario);
 }
+
+/* Barra de Navegação */
+nav {
+  margin: 1rem;
+}
   
-/* Container principal */
+/* Seção quote */
 .quote-container {
   display: flex;
   background-color: var(--background-color-principal);
@@ -151,7 +155,7 @@ flex: 1 1 50%;}
   background-color: var(--background-color-principal);
   text-align: center;
   padding: 1rem 0;
-  height: 18rem;
+  height: 20rem;
   width: 12rem;
 }
 
@@ -160,6 +164,7 @@ flex: 1 1 50%;}
   background-color: var(--background-color-secundario);
   width: 100wv;
   margin: 2rem 0;
+  padding: 1rem;
 }
 
 .planos .container-planos
